@@ -2,8 +2,7 @@ package uk.gov.hmcts.reform.orgrolemapping.domain.service;
 
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.junit.runner.RunWith;
 import org.mockito.junit.MockitoJUnitRunner;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.Authorisation;
@@ -16,22 +15,21 @@ import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.Classification;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.GrantType;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.RoleCategory;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.RoleType;
-
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInAnyOrder;
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNull;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import uk.gov.hmcts.reform.orgrolemapping.helper.RoleAssignmentAssertHelper.MultiRegion;
 
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
+import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @RunWith(MockitoJUnitRunner.class)
 class DroolPublicLawJudicialRoleMappingTest extends DroolBase {
@@ -39,16 +37,18 @@ class DroolPublicLawJudicialRoleMappingTest extends DroolBase {
     private static final String USER_ID = "3168da13-00b3-41e3-81fa-cbc71ac28a69";
     private static final ZonedDateTime BOOKING_BEGIN_TIME = ZonedDateTime.now(ZoneOffset.UTC).minusDays(1);
     private static final ZonedDateTime BOOKING_END_TIME = ZonedDateTime.now(ZoneOffset.UTC).plusDays(1);
-    private static final String BOOKING_REGION_ID = "1";
     private static final String BOOKING_LOCATION_ID = "Scotland";
     private static final ZonedDateTime ACCESS_PROFILE_BEGIN_TIME = ZonedDateTime.now(ZoneOffset.UTC).minusMonths(1);
     private static final ZonedDateTime ACCESS_PROFILE_END_TIME = ZonedDateTime.now(ZoneOffset.UTC).plusMonths(1);
     private static final String ACCESS_PROFILE_REGION_ID = "LDN";
     private static final String ACCESS_PROFILE_PRIMARY_LOCATION_ID = "London";
 
+    // NB: multi-regions are: London and South-East
+    static List<String> multiRegionList = List.of("1", "5");
+
     static Map<String, String> expectedRoleNameWorkTypesMap = new HashMap<>();
 
-    {
+    static {
         expectedRoleNameWorkTypesMap.put("judge", "hearing_work,routine_work,decision_making_work,"
                 + "applications");
         expectedRoleNameWorkTypesMap.put("hmcts-judiciary", null);
@@ -63,271 +63,62 @@ class DroolPublicLawJudicialRoleMappingTest extends DroolBase {
         expectedRoleNameWorkTypesMap.put("magistrate", null);
     }
 
-    static Stream<Arguments> endToEndData() {
-        return Stream.of(
-                Arguments.of("Circuit Judge",
-                        "Salaried",
-                        false,
-                        true,
-                        List.of(""),
-                        List.of("judge", "hmcts-judiciary", "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy Circuit Judge",
-                        "Fee Paid",
-                        true,
-                        true,
-                        List.of("Deputy District Judge"),
-                        List.of("judge", "fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy Circuit Judge",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Deputy District Judge"),
-                        List.of("fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy Circuit Judge",
-                        "Fee Paid",
-                        false,
-                        false,
-                        List.of("Deputy District Judge"),
-                        List.of("fee-paid-judge", "hmcts-judiciary")),
-                Arguments.of("Deputy District Judge - PRFD",
-                        "Fee Paid",
-                        true,
-                        true,
-                        List.of("Deputy District Judge"),
-                        List.of("judge", "fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy District Judge - PRFD",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Deputy District Judge"),
-                        List.of("fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy District Judge (MC)- Fee paid",
-                        "Fee Paid",
-                        true,
-                        true,
-                        List.of("Deputy District Judge"),
-                        List.of("judge", "fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy District Judge (MC)- Fee paid",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Deputy District Judge"),
-                        List.of("fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy District Judge (MC)- Sitting in Retirement",
-                        "Fee Paid",
-                        true,
-                        true,
-                        List.of("Deputy District Judge"),
-                        List.of("judge", "fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy District Judge (MC)- Sitting in Retirement",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Deputy District Judge"),
-                        List.of("fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy District Judge- Fee-Paid",
-                        "Fee Paid",
-                        true,
-                        true,
-                        List.of(""),
-                        List.of("judge", "fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy District Judge- Fee-Paid",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of(""),
-                        List.of("fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy District Judge- Sitting in Retirement",
-                        "Fee Paid",
-                        true,
-                        true,
-                        List.of(""),
-                        List.of("judge", "fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy District Judge- Sitting in Retirement",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of(""),
-                        List.of("fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy High Court Judge",
-                        "Fee Paid",
-                        true,
-                        true,
-                        List.of("Deputy High Court Judge"),
-                        List.of("judge","fee-paid-judge","hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Deputy High Court Judge",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Deputy High Court Judge"),
-                        List.of("fee-paid-judge","hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("District Judge",
-                        "Salaried",
-                        true,
-                        true,
-                        List.of(""),
-                        List.of("judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("District Judge (MC)",
-                        "SPTW",
-                        true,
-                        true,
-                        List.of("District Judge"),
-                        List.of("judge","hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("High Court Judge",
-                        "Salaried",
-                        true,
-                        true,
-                        List.of(""),
-                        List.of("judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("High Court Judge- Sitting in Retirement",
-                        "Fee Paid",
-                        true,
-                        true,
-                        List.of("High Court Judge"),
-                        List.of("judge", "fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("High Court Judge- Sitting in Retirement",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("High Court Judge"),
-                        List.of("fee-paid-judge", "hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                // hearing-manager excluded from Magistrate
-                Arguments.of("Magistrate", "Voluntary",
-                        false,
-                        true,
-                        List.of("Magistrate - Voluntary"),
-                        List.of("magistrate", "hearing-viewer")),
-                Arguments.of("Recorder", "Fee Paid",
-                        false,
-                        true,
-                        List.of("Recorder - Fee Paid"),
-                        List.of("fee-paid-judge","hmcts-judiciary",
-                                "hearing-viewer", "hearing-manager")),
-                Arguments.of("Tribunal Judge", "Salaried",
-                        false,
-                        true,
-                        List.of("Tribunal Judge - Salaried"),
-                        List.of("judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                Arguments.of("Employment Judge", "Salaried",
-                        false,
-                        true,
-                        List.of("Employment Judge - Salaried"),
-                        List.of("judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                Arguments.of("Specialist Circuit Judge", "Salaried",
-                        false,
-                        true,
-                        List.of("Specialist Circuit Judge - Salaried"),
-                        List.of("judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                Arguments.of("Senior Circuit Judge", "Salaried",
-                        false,
-                        true,
-                        List.of("Senior Circuit Judge - Salaried"),
-                        List.of("judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                Arguments.of("Circuit Judge (sitting in retirement)", "Fee Paid",
-                        true,
-                        true,
-                        List.of("Circuit Judge - Sitting in Retirement - Fee Paid"),
-                        List.of("judge","fee-paid-judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                //no Judicial Booking, no judge role
-                Arguments.of("Circuit Judge (sitting in retirement)", "Fee Paid",
-                        false,
-                        true,
-                        List.of("Circuit Judge - Sitting in Retirement - Fee Paid"),
-                        List.of("fee-paid-judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                Arguments.of("Recorder (sitting in retirement)", "Fee Paid",
-                        true,
-                        true,
-                        List.of("Recorder - Sitting in Retirement - Fee Paid"),
-                        List.of("judge","fee-paid-judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                //no Judicial Booking, no judge role
-                Arguments.of("Recorder (sitting in retirement)", "Fee Paid",
-                        false,
-                        true,
-                        List.of("Recorder - Sitting in Retirement - Fee Paid"),
-                        List.of("fee-paid-judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                Arguments.of("Deputy Upper Tribunal Judge", "Fee Paid",
-                        true,
-                        true,
-                        List.of("Deputy Upper Tribunal Judge - Fee Paid"),
-                        List.of("judge","fee-paid-judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                //no Judicial Booking, no judge role
-                Arguments.of("Deputy Upper Tribunal Judge", "Fee Paid",
-                        false,
-                        true,
-                        List.of("Deputy Upper Tribunal Judge - Fee Paid"),
-                        List.of("fee-paid-judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                Arguments.of("District Judge (MC) (sitting in retirement)", "Fee Paid",
-                        true,
-                        true,
-                        List.of("District Judge (MC) - Sitting in Retirement - Fee Paid"),
-                        List.of("judge","fee-paid-judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                //no Judicial Booking, no judge role
-
-                Arguments.of("District Judge (MC) (sitting in retirement)", "Fee Paid",
-                        false,
-                        true,
-                        List.of("District Judge (MC) - Sitting in Retirement - Fee Paid"),
-                        List.of("fee-paid-judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                Arguments.of("District Judge (sitting in retirement)", "Fee Paid",
-                        true,
-                        true,
-                        List.of("District Judge - Sitting in Retirement - Fee Paid"),
-                        List.of("judge","fee-paid-judge","hmcts-judiciary","hearing-viewer","hearing-manager")),
-                //no Judicial Booking, no judge role
-                Arguments.of("District Judge (sitting in retirement)", "Fee Paid",
-                        false,
-                        true,
-                        List.of("District Judge - Sitting in Retirement - Fee Paid"),
-                        List.of("fee-paid-judge","hmcts-judiciary","hearing-viewer","hearing-manager"))
-        );
-    }
-
     @ParameterizedTest
-    @MethodSource("endToEndData")
-    void shouldTakeJudicialAccessProfileConvertToJudicialOfficeHolderThenReturnRoleAssignments(
-            String appointment, String appointmentType, boolean addBooking, boolean hearingFlag,
-            List<String> assignedRoles, List<String> expectedRoleNames) {
+    @CsvSource({
+        "Circuit Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',1,true",
+        "Circuit Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',5,true",
+        "Circuit Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',2,false",
+
+        "District Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',1,true",
+        "District Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',5,true",
+        "District Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',3,false",
+
+        "District Judge (MC),Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',1,true",
+        "District Judge (MC),Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',5,true",
+        "District Judge (MC),Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',4,false",
+
+        "High Court Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',1,true",
+        "High Court Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',5,true",
+        "High Court Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',6,false",
+
+        "_,Salaried,true,'Designated Family Judge','leadership-judge,judge,task-supervisor,hmcts-judiciary,"
+                + "case-allocator,specific-access-approver-judiciary,hearing-viewer,hearing-manager',1,true",
+        "_,Salaried,true,'Designated Family Judge','leadership-judge,judge,task-supervisor,hmcts-judiciary,"
+                + "case-allocator,specific-access-approver-judiciary,hearing-viewer,hearing-manager',5,true",
+        "_,Salaried,true,'Designated Family Judge','leadership-judge,judge,task-supervisor,hmcts-judiciary,"
+                + "case-allocator,specific-access-approver-judiciary,hearing-viewer,hearing-manager',7,false",
+
+        "Tribunal Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',1,true",
+        "Tribunal Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',5,true",
+        "Tribunal Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',8,false",
+
+        "Employment Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',1,true",
+        "Employment Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',5,true",
+        "Employment Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',9,false",
+
+        "Specialist Circuit Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',1,true",
+        "Specialist Circuit Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',5,true",
+        "Specialist Circuit Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',10,false",
+
+        "Senior Circuit Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',1,true",
+        "Senior Circuit Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',5,true",
+        "Senior Circuit Judge,Salaried,true,'','judge,hmcts-judiciary,hearing-viewer,hearing-manager',11,false",
+    })
+    void shouldReturnSalariedRolesFromJudicialAccessProfile(
+            String appointment, String appointmentType, boolean hearingFlag, String assignedRoles,
+            String expectedRoleNames, String region, boolean expectMultiRegion) {
 
         allProfiles.clear();
         judicialAccessProfiles.clear();
         judicialOfficeHolders.clear();
-        judicialBookings.clear();
-
-        if (addBooking) {
-            JudicialBooking booking = JudicialBooking.builder()
-                    .userId(USER_ID).locationId(BOOKING_LOCATION_ID).regionId(BOOKING_REGION_ID)
-                    .beginTime(BOOKING_BEGIN_TIME)
-                    .endTime(BOOKING_END_TIME)
-                    .build();
-            judicialBookings.add(booking);
-        }
 
         judicialAccessProfiles.add(
                 JudicialAccessProfile.builder()
                         .appointment(appointment)
                         .appointmentType(appointmentType)
                         .userId(USER_ID)
-                        .roles(assignedRoles)
-                        .regionId(ACCESS_PROFILE_REGION_ID)
+                        .roles(Arrays.stream(assignedRoles.split(",")).toList())
+                        .regionId(region)
                         .primaryLocationId(ACCESS_PROFILE_PRIMARY_LOCATION_ID)
                         .ticketCodes(List.of("ABA3"))
                         .beginTime(ACCESS_PROFILE_BEGIN_TIME)
@@ -342,28 +133,38 @@ class DroolPublicLawJudicialRoleMappingTest extends DroolBase {
                         .build()
         );
 
+        // create map for all salaried roleNames that need regions
+        List<String> rolesThatRequireRegions = List.of(
+                "judge",
+                "leadership-judge",
+                "task-supervisor",
+                "case-allocator",
+                "specific-access-approver-judiciary"
+        );
+
+        Map<String, List<String>> roleNameToRegionsMap = MultiRegion.buildRoleNameToRegionsMap(rolesThatRequireRegions);
+
         //Execute Kie session
-        List<RoleAssignment> roleAssignments =
-                buildExecuteKieSession(
-                        List.of(FeatureFlag.builder().flagName("publiclaw_wa_1_0").status(true).build(),
-                                FeatureFlag.builder().flagName("sscs_hearing_1_0").status(hearingFlag).build(),
-                                FeatureFlag.builder().flagName("publiclaw_wa_1_1").status(true).build(),
-                                FeatureFlag.builder().flagName("publiclaw_wa_1_2").status(true).build(),
-                                FeatureFlag.builder().flagName("publiclaw_wa_1_3").status(true).build())
-                );
+        List<RoleAssignment> roleAssignments = buildExecuteKieSession(setFeatureFlags(hearingFlag));
 
         //assertions
-        assertFalse(roleAssignments.isEmpty());
-
-        List<String> roleNameResults =
-                roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList());
-        assertThat(roleNameResults, containsInAnyOrder(expectedRoleNames.toArray()));
+        List<String> expectedRoleList = Arrays.stream(expectedRoleNames.split(",")).toList();
+        MultiRegion.assertRoleAssignmentCount(
+                roleAssignments,
+                expectedRoleList,
+                expectMultiRegion,
+                rolesThatRequireRegions,
+                multiRegionList
+        );
 
         roleAssignments.forEach(r -> {
             assertEquals(ActorIdType.IDAM, r.getActorIdType());
             assertEquals(USER_ID, r.getActorId());
             assertEquals(RoleType.ORGANISATION, r.getRoleType());
             assertEquals(RoleCategory.JUDICIAL, r.getRoleCategory());
+            if (r.getAttributes().get("contractType") != null) {
+                assertEquals("Salaried", r.getAttributes().get("contractType").asText());
+            }
 
             String expectedWorkTypes = expectedRoleNameWorkTypesMap.get(r.getRoleName());
             String actualWorkTypes = null;
@@ -372,15 +173,151 @@ class DroolPublicLawJudicialRoleMappingTest extends DroolBase {
             }
             assertEquals(expectedWorkTypes, actualWorkTypes);
 
-            assertRoleSpecificAtrributes(r, appointmentType);
+            assertRoleSpecificAttributes(r, appointmentType, roleNameToRegionsMap, region);
         });
+
+        // verify regions add to map
+        MultiRegion.assertRoleNameToRegionsMapIsAsExpected(
+                roleNameToRegionsMap,
+                expectedRoleList,
+                expectMultiRegion,
+                multiRegionList,
+                region, // fallback if not multi-region scenario
+                null // i.e. no bookings
+        );
     }
 
-    private void assertRoleSpecificAtrributes(RoleAssignment r, String appointmentType) {
+    @ParameterizedTest
+    @CsvSource({
+        "Deputy Circuit Judge,Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,hearing-viewer,"
+                + "hearing-manager',1,false",
+        "Recorder,Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,hearing-viewer,hearing-manager',2,false",
+        "Deputy District Judge - PRFD,Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,hearing-viewer,"
+                + "hearing-manager',3,false",
+        "Deputy District Judge (MC)- Fee paid,Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,"
+                + "hearing-viewer,hearing-manager',4,false",
+        "Deputy District Judge (MC)- Sitting in Retirement,Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,"
+                + "hearing-viewer,hearing-manager',5,false",
+        "Deputy District Judge- Fee-Paid,Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,hearing-viewer,"
+                + "hearing-manager',6,false",
+        "Deputy District Judge- Sitting in Retirement,Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,"
+                + "hearing-viewer,hearing-manager',7,false",
+        "Deputy High Court Judge,Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,hearing-viewer"
+                + ",hearing-manager',8,false",
+        "High Court Judge- Sitting in Retirement,Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,"
+                + "hearing-viewer,hearing-manager',9,false",
+        "Circuit Judge (sitting in retirement),Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,"
+                + "hearing-viewer,hearing-manager',10,false",
+        "Recorder (sitting in retirement),Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,hearing-viewer"
+                + ",hearing-manager',10,false",
+        "Deputy Upper Tribunal Judge,Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,hearing-viewer,"
+                + "hearing-manager',11,false",
+        "District Judge (MC) (sitting in retirement),Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,"
+                + "hearing-viewer,hearing-manager',12,false",
+        "District Judge (sitting in retirement),Fee Paid,true,true,'','judge,fee-paid-judge,hmcts-judiciary,"
+                + "hearing-viewer,hearing-manager',1,false",
+    })
+    void shouldReturnFeePaidRolesFromJudicialAccessProfile(
+            String appointment, String appointmentType, boolean addBooking, boolean hearingFlag,
+            String assignedRoles, String expectedRoleNames, String region, boolean expectMultiRegion) {
+
+        allProfiles.clear();
+        judicialAccessProfiles.clear();
+        judicialOfficeHolders.clear();
+        judicialBookings.clear();
+
+        JudicialBooking booking = null;
+        if (addBooking) {
+            booking = JudicialBooking.builder()
+                    .userId(USER_ID).locationId(BOOKING_LOCATION_ID)
+                    .regionId(region)
+                    .beginTime(BOOKING_BEGIN_TIME)
+                    .endTime(BOOKING_END_TIME)
+                    .build();
+            judicialBookings.add(booking);
+        }
+
+        judicialAccessProfiles.add(
+                JudicialAccessProfile.builder()
+                        .appointment(appointment)
+                        .appointmentType(appointmentType)
+                        .userId(USER_ID)
+                        .roles(Arrays.stream(assignedRoles.split(",")).toList())
+                        .regionId(region)
+                        .primaryLocationId(ACCESS_PROFILE_PRIMARY_LOCATION_ID)
+                        .ticketCodes(List.of("ABA3"))
+                        .beginTime(ACCESS_PROFILE_BEGIN_TIME)
+                        .endTime(ACCESS_PROFILE_END_TIME)
+                        .authorisations(List.of(
+                                Authorisation.builder()
+                                        .serviceCodes(List.of("ABA3"))
+                                        .jurisdiction("PUBLICLAW")
+                                        .endDate(LocalDateTime.now().plusYears(1L))
+                                        .build()
+                        ))
+                        .build()
+        );
+
+        // create map for all fee paid roleNames that need regions
+        List<String> rolesThatRequireRegions = List.of(
+                "judge",
+                "fee-paid-judge"
+        );
+
+        Map<String, List<String>> roleNameToRegionsMap = MultiRegion.buildRoleNameToRegionsMap(rolesThatRequireRegions);
+
+        //Execute Kie session
+        List<RoleAssignment> roleAssignments = buildExecuteKieSession(setFeatureFlags(hearingFlag));
+
+        //assertions
+        List<String> expectedRoleList = Arrays.stream(expectedRoleNames.split(",")).toList();
+        MultiRegion.assertRoleAssignmentCount(
+                roleAssignments,
+                expectedRoleList,
+                expectMultiRegion,
+                rolesThatRequireRegions,
+                multiRegionList
+        );
+
+        roleAssignments.forEach(r -> {
+            assertEquals(ActorIdType.IDAM, r.getActorIdType());
+            assertEquals(USER_ID, r.getActorId());
+            assertEquals(RoleType.ORGANISATION, r.getRoleType());
+            assertEquals(RoleCategory.JUDICIAL, r.getRoleCategory());
+            if (r.getAttributes().get("contractType") != null) {
+                assertEquals("Fee-Paid", r.getAttributes().get("contractType").asText());
+            }
+
+            String expectedWorkTypes = expectedRoleNameWorkTypesMap.get(r.getRoleName());
+            String actualWorkTypes = null;
+            if (r.getAttributes().get("workTypes") != null) {
+                actualWorkTypes = r.getAttributes().get("workTypes").asText();
+            }
+            assertEquals(expectedWorkTypes, actualWorkTypes);
+
+            assertRoleSpecificAttributes(r, appointmentType, roleNameToRegionsMap, region);
+        });
+
+        // verify regions add to map
+        MultiRegion.assertRoleNameToRegionsMapIsAsExpected(
+                roleNameToRegionsMap,
+                expectedRoleList,
+                expectMultiRegion,
+                multiRegionList,
+                region, // fallback if not multi-region scenario
+                booking != null ? booking.getRegionId() : null
+        );
+    }
+
+    private void assertRoleSpecificAttributes(RoleAssignment r, String appointmentType,
+                                              Map<String, List<String>> roleNameToRegionsMap, String region) {
         String primaryLocation = null;
         if (r.getAttributes().get("primaryLocation") != null) {
             primaryLocation = r.getAttributes().get("primaryLocation").asText();
         }
+
+        // check region status and add to map
+        MultiRegion.assertRegionStatusAndUpdateRoleToRegionMap(r, roleNameToRegionsMap);
 
         if (r.getRoleName().equals("hmcts-judiciary")) {
             assertEquals(Classification.PRIVATE, r.getClassification());
@@ -400,16 +337,12 @@ class DroolPublicLawJudicialRoleMappingTest extends DroolBase {
             if (r.getRoleName().equals("judge") && appointmentType.equals("Fee Paid")) {
                 assertEquals(BOOKING_BEGIN_TIME, r.getBeginTime());
                 assertEquals(BOOKING_END_TIME, r.getEndTime());
-                assertEquals(BOOKING_REGION_ID, r.getAttributes().get("region").asText());
+                assertEquals(region, r.getAttributes().get("region").asText());
                 assertEquals(BOOKING_LOCATION_ID, primaryLocation);
             } else {
                 assertEquals(ACCESS_PROFILE_BEGIN_TIME, r.getBeginTime());
                 assertEquals(ACCESS_PROFILE_END_TIME.plusDays(1), r.getEndTime());
                 assertEquals(ACCESS_PROFILE_PRIMARY_LOCATION_ID, primaryLocation);
-                if (!r.getRoleName().equals("hearing-viewer")
-                        && !r.getRoleName().equals("hearing-manager")) {
-                    assertEquals(ACCESS_PROFILE_REGION_ID, r.getAttributes().get("region").asText());
-                }
             }
 
         }
@@ -446,5 +379,18 @@ class DroolPublicLawJudicialRoleMappingTest extends DroolBase {
 
         //assertions
         assertTrue(roleAssignments.isEmpty());
+    }
+
+    private List<FeatureFlag> setFeatureFlags(boolean hearingFlag) {
+        List<FeatureFlag> featureFlags = new ArrayList<>(getAllFeatureFlagsToggleByJurisdiction("PUBLICLAW", true));
+
+        featureFlags.add(
+                FeatureFlag.builder()
+                        .flagName("sscs_hearing_1_0")
+                        .status(hearingFlag)
+                        .build()
+        );
+
+        return featureFlags;
     }
 }
